--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Html
                     <!-- GitHub -->
                     <div class="github">
                         <p>
-                            <a href="https://github.com/Renenunes" target="_blank" class="botaoBaixar">EnisonCarvalho</a>
+                            <a href="https://github.com/Renenunes" target="_blank" class="botaoBaixar">Rene Nunes</a>
                         </p>
                         <img class="iconeGit" src="img/logogit.webp" alt="Ícone do GitHub">
                     </div>
